--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask-migrate = "*"
 sqlalchemy-serializer = "*"
 requests = "*"
 flask-cors = "*"
+flask-jwt-extended = "*"
+werkzeug = "*"
 
 [dev-packages]
 
